--- a/src/components/model/conceptForm.html
+++ b/src/components/model/conceptForm.html
@@ -24,7 +24,7 @@
 
     <div class="editable-wrap form-group">
       <editable-label data-title="'Vocabulary'"></editable-label>
-      <a ng-repeat="scheme in ctrl.concept.inScheme" ng-href="{{ctrl.linkToScheme(scheme)}}">{{ctrl.nameForScheme(scheme)}}<span ng-show="!$last">, </span></a>
+      <a ng-repeat="scheme in ctrl.schemes" ng-href="{{scheme.href}}">{{scheme.name}}<span ng-show="!$last">, </span></a>
     </div>
 
     <defined-by entity="ctrl.concept" model="ctrl.model"></defined-by>
