--- a/src/components/model/conceptForm.html
+++ b/src/components/model/conceptForm.html
@@ -5,13 +5,13 @@
 
 <div class="row">
   <div class="col-md-12">
-    <editable data-title="Concept label" context="ctrl.context">
+    <editable data-title="Concept label" context="ctrl.model">
       <div class="input-group input-group-md">
         <input id="conceptLabel" type="text" class="form-control" localized-input="label" ng-model="ctrl.concept.label" />
       </div>
     </editable>
 
-    <editable data-title="Definition" context="ctrl.context">
+    <editable data-title="Definition" context="ctrl.model">
       <div class="input-group input-group-md">
         <textarea id="conceptComment" class="form-control" localized-input="required" ng-model="ctrl.concept.comment"></textarea>
       </div>
