--- a/src/components/model/conceptForm.html
+++ b/src/components/model/conceptForm.html
@@ -24,7 +24,10 @@
 
     <div ng-show="ctrl.schemes.length > 0" class="editable-wrap form-group">
       <editable-label data-title="'Vocabulary'"></editable-label>
-      <a ng-repeat="scheme in ctrl.schemes" ng-href="{{scheme.href}}">{{scheme.name}}<span ng-show="!$last">, </span></a>
+      <div ng-repeat="scheme in ctrl.schemes">
+        <a ng-if="scheme.href" ng-href="{{scheme.href}}">{{scheme.getLocalizedName(ctrl.localizer)}}<span ng-show="!$last">, </span></a>
+        <span ng-if="!scheme.href">{{scheme.getLocalizedName(ctrl.localizer)}}<span ng-show="!$last">, </span></span>
+      </div>
     </div>
 
     <defined-by entity="ctrl.concept" model="ctrl.model"></defined-by>
