--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -36,24 +36,33 @@
     <editable data-title="State" value-as-localization-key="true" ng-if="!ctrl.predicate.unsaved" context="ctrl.model">
       <state-select id="predicateState" state="ctrl.predicate.state" model="ctrl.model"></state-select>
     </editable>
-
-    <editable data-title="Editorial note" context="ctrl.model">
-      <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.predicate.editorialNote"></textarea>
-    </editable>
   </div>
 
 </div>
 
 <div class="row">
-
   <div class="col-md-12">
-
     <editable-subject-select type="{{ctrl.predicate.normalizedType}}" subject="ctrl.predicate.subject" model="ctrl.model" disable="!ctrl.predicate.inUnstableState"></editable-subject-select>
-
   </div>
-
 </div>
 
 <h4 translate>Additional information</h4>
 
-<usage-panel entity="ctrl.predicate" context="ctrl.model"></usage-panel>
+<div class="row">
+  <div class="col-md-6">
+    <non-editable data-title="Created at" value="ctrl.predicate.createdAt" context="ctrl.model"></non-editable>
+
+    <editable data-title="Editorial note" context="ctrl.model">
+      <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.predicate.editorialNote"></textarea>
+    </editable>
+  </div>
+  <div class="col-md-6">
+    <non-editable data-title="Modified at" value="ctrl.predicate.modifiedAt" context="ctrl.model"></non-editable>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-12">
+    <usage-panel entity="ctrl.predicate" context="ctrl.model"></usage-panel>
+  </div>
+</div>
