Show missing association targets with placeholders in class visualization
Closes #427

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -739,6 +739,11 @@ subject-view .editable-wrap {
     &.background {
       fill-opacity: 0.3;
     }
+
+    > g.shadow .uml-class-name-rect {
+      fill: $gray;
+    }
+
     &.selected {
       .uml-class-name-rect {
         fill: #c2606e;
