--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -40,5 +40,5 @@
   <code-schemes-view model="ctrl.model"></code-schemes-view>
   <requires-view model="ctrl.model" model-controller="ctrl.modelController"></requires-view>
   <technical-namespaces model="ctrl.model"></technical-namespaces>
-  <relations-view model="ctrl.model"></relations-view>
+  <links-view model="ctrl.model"></links-view>
 </div>
