Requires view and modal renamed as namespaces

--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -38,7 +38,7 @@
 <div class="col-md-5 col-md-offset-1">
   <references-view model="ctrl.model"></references-view>
   <code-schemes-view model="ctrl.model"></code-schemes-view>
-  <requires-view model="ctrl.model" model-controller="ctrl.modelController"></requires-view>
+  <imported-namespaces-view model="ctrl.model" model-controller="ctrl.modelController"></imported-namespaces-view>
   <technical-namespaces model="ctrl.model"></technical-namespaces>
   <links-view model="ctrl.model"></links-view>
 </div>
