References view and modal renamed as vocabularies

--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -36,7 +36,7 @@
 </div>
 
 <div class="col-md-5 col-md-offset-1">
-  <references-view model="ctrl.model"></references-view>
+  <vocabularies-view model="ctrl.model"></vocabularies-view>
   <code-schemes-view model="ctrl.model"></code-schemes-view>
   <imported-namespaces-view model="ctrl.model" model-controller="ctrl.modelController"></imported-namespaces-view>
   <technical-namespaces model="ctrl.model"></technical-namespaces>
