--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -37,7 +37,7 @@
 
 <div class="col-md-5 col-md-offset-1">
   <vocabularies-view model="ctrl.model"></vocabularies-view>
-  <code-schemes-view model="ctrl.model"></code-schemes-view>
+  <reference-datas-view model="ctrl.model"></reference-datas-view>
   <imported-namespaces-view model="ctrl.model" model-controller="ctrl.modelController"></imported-namespaces-view>
   <technical-namespaces model="ctrl.model"></technical-namespaces>
   <links-view model="ctrl.model"></links-view>
