--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -47,7 +47,7 @@ $footer-height: 50px;
   color: $brand-accent-dark;
 }
 
-code-scheme-view.popup {
+reference-data-view.popup {
 
   h4 { display: none; }
 
