--- a/src/components/model/conceptForm.html
+++ b/src/components/model/conceptForm.html
@@ -24,9 +24,9 @@
 
     <div ng-if="ctrl.schemes.length > 0 && !ctrl.isSchemeEditable()" class="editable-wrap form-group">
       <editable-label data-title="'Vocabulary'"></editable-label>
-      <div ng-repeat="scheme in ctrl.schemes">
-        <a ng-if="scheme.href" ng-href="{{scheme.href}}">{{scheme.getLocalizedName(ctrl.localizer)}}<span ng-show="!$last">, </span></a>
-        <span ng-if="!scheme.href">{{scheme.getLocalizedName(ctrl.localizer)}}<span ng-show="!$last">, </span></span>
+      <div ng-repeat="vocabularyName in ctrl.vocabularyNames">
+        <a ng-if="vocabularyName.href" ng-href="{{vocabularyName.href}}">{{vocabularyName.getLocalizedName(ctrl.localizer)}}<span ng-show="!$last">, </span></a>
+        <span ng-if="!scheme.href">{{vocabularyName.getLocalizedName(ctrl.localizer)}}<span ng-show="!$last">, </span></span>
       </div>
     </div>
 
@@ -35,14 +35,14 @@
       <div class="editable-wrap form-group">
         <editable-label data-title="'Vocabulary'" input-id="vocabulary" required="'true'"></editable-label>
         <div ng-if="ctrl.isEditing()">
-          <select id="vocabulary" class="form-control" required ng-model="ctrl.concept.inScheme"
+          <select id="vocabulary" class="form-control" required ng-model="ctrl.concept.vocabulary"
                   ng-options="(vocabulary | translateLabel: ctrl.model) for vocabulary in ctrl.model.vocabularies | filter: !vocabulary.local">
           </select>
         </div>
 
         <div ng-if="!ctrl.isEditing()">
-          <span ng-if="ctrl.concept.inScheme.local" translate>Internal vocabulary</span>
-          <a ng-if="!ctrl.concept.inScheme.local" ng-href="{{ctrl.concept.inScheme.href}}">{{ctrl.concept.inScheme | translateLabel: ctrl.model}}</a>
+          <span ng-if="ctrl.concept.vocabulary.local" translate>Internal vocabulary</span>
+          <a ng-if="!ctrl.concept.vocabulary.local" ng-href="{{ctrl.concept.vocabulary.href}}">{{ctrl.concept.vocabulary | translateLabel: ctrl.model}}</a>
         </div>
       </div>
     </div>
