--- a/src/components/model/searchVocabularyModal.html
+++ b/src/components/model/searchVocabularyModal.html
@@ -17,7 +17,7 @@
         <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
 
         <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
-          <h5>{{searchResult.title}}</h5>
+          <h5>{{searchResult | translateLabel}}</h5>
         </search-results>
       </div>
     </div>
